# stack-wise

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TRAINER_MODULE.md  activate.sh  config.yaml  config_backup.yaml  config_small.yaml  config_standard.yaml  custom_config.yaml  instructions.md  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  setup_env.sh  setup_venv.sh  switch_config.py  test_mask_handling.py
baselines/: IMPLEMENTATION_SUMMARY.md  README.md  setup.py
baselines/configs/: config.yaml
baselines/examples/: HYDRA_QUICK_REFERENCE.md  HYDRA_VISUAL_GUIDE.md  hydra_simple_explanation.py  hydra_tutorial.py  quick_start.py  simple_experiment.yaml  simple_hydra_demo.py
baselines/scripts/: benchmark.py  evaluate.py  train.py
baselines/tests/: test_evaluation.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  BLOCK_STACK_RACK.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  README.md  TODO.md  TRAINER_MODULE.md  api_reference.md  architecture.md  baselines_module_prd.md  changelog.md  checkpointing_guide.md  configuration_guide.md  depth_as_time_design.md  framework_glue_design.md  implementation_status.md  instructions.md  progressive_training.md  stackwise_framework_reformulation.md  todo.md  unified_framework_implementation.md
examples/: architecture_example.py  attention_config_example.py  attention_usage_examples.py  checkpointing_example.py  config_backup.yaml  config_example.py  curriculum_rlm_qlora_example.py  custom_config.yaml  dual_lora_example.py  mlgka_text_classification.py  progressive_qlora_example.py  progressive_training_example.py  progressive_training_system_example.py  simple_architecture_example.py  simple_checkpointing_test.py  simple_mlgka_example.py  simplified_qlora_example.py  tokenizer_integration_example.py  training_example.py  training_machine_example.py  unified_trainer_example.py
examples/gpt2_fusion/: README.md  README_UPDATE_NEEDED.md  data_loader.py  evaluate_gpt2.py  gpt2.yaml  run_example.sh  setup.py  simple_train.py  train_gpt2_fusion.py
examples/tiny_bert/: README.md  evaluate_tiny_bert.py  simple_test.py  tiny_bert_config.yaml  toy_dataset.py  train_tiny_bert.py  use_tiny_bert.py
examples/tiny_llama/: README.md  evaluate_tiny_llama.py  tiny_llama_config.yaml  toy_dataset.py  train_tiny_llama.py  use_tiny_llama.py
ref/: README.md  StackWise_SRD.md  config.yaml
ref/src/: train_layerwise.py
src/config/: __init__.py  base.py  example.py  tokenizer_integration.py
src/framework/: __init__.py  adapters.py  factories.py  specs.py
src/model/: __init__.py  architecture.py  layers.py
tests/: README.md  __init__.py  run_tests.py
(+81 files in other folders)
